--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primaryColor">#97c9f8</color>
+    <color name="primaryLightColor">#cafcff</color>
+    <color name="primaryDarkColor">#6598c5</color>
+    <color name="secondaryColor">#b5dafc</color>
+    <color name="secondaryLightColor">#e8ffff</color>
+    <color name="secondaryDarkColor">#84a9c9</color>
+    <color name="primaryTextColor">#555</color>
+    <color name="secondaryTextColor">#555</color>
+
+    <color name="error">#e57373</color>
+    <color name="success">#81c784</color>
+    <color name="warning">#fff176</color>
+    <color name="info">#64b5f6</color>
+
+
 </resources>
